<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory android:title="Details">
    <EditTextPreference android:inputType="number"
                    android:defaultValue="@string/defaultDelay"
                    android:key="@string/key_delay"
                    android:title="@string/delay"/>
    <EditTextPreference android:inputType="number"
                        android:defaultValue="@string/defaultSensitivity"
                        android:key="@string/key_sensitivity"
                        android:title="@string/sensitivity" />
    </PreferenceCategory>
    
    <PreferenceCategory android:title="Sensor">
        <ListPreference android:key="@string/key_SENSOR_LIST"
                        android:title="Choose Sensor"
                        android:entries="@array/sensorpreflistentries"
                        android:entryValues="@array/sensorlistvalues"
                        android:defaultValue="1">
        </ListPreference>
    </PreferenceCategory>
</PreferenceScreen>